[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decryption_package"
version = "0.1.0"
description = "A Python package for MCMC-based text decryption."
authors = [
    {name = "Yahan Yang", email = "yahany@andrew.cmu.edu"}
]
license = {text = "CMU"}
readme = "README.md"
keywords = ["decryption", "MCMC", "text processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CMU License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "math",
    "random",
    "string",
    "Counter"
]

[project.urls]
Homepage = "https://github.com/your-username/decryption_package"

